Fixed date not showing

--- a/src/components/Job/Job.module.scss
+++ b/src/components/Job/Job.module.scss
@@ -60,7 +60,7 @@ $breakpoint: sm;
   @extend .col;
 
   @media (min-width: layout.breakpoint($breakpoint)) {
-    padding: 0 0 2rem 0;
+    padding: 0 0 2rem 2rem;
   }
 
   &_align_right {
